@@ -122,6 +122,7 @@ v1.4
 - Added overwrite for specific Lenovo Tablets that do not conform to normal conventions.
 - Made the Analyzer Serializable which should make using it in distributed systems easier.
 - Improve the detection of certain Robots and the old Tablet PC
+- Fixed class of broken useragents.
 
 
 
